Add support for R5F104PJ RL78-G14 CPU

--- a/cpu/rl78/Makefile.rl78
+++ b/cpu/rl78/Makefile.rl78
@@ -146,7 +146,12 @@ endif
   CFLAGS  += -fno-builtin
   LDFLAGS += -fno-builtin
 
-  LDFLAGS += -Wl,--gc-sections -T $(CONTIKI_CPU)/R5F100xL.ld -nostartfiles
+  LDFLAGS += -Wl,--gc-sections -nostartfiles
+ifeq ($(TARGET),eval-adf7xxxmb4z)
+  LDFLAGS += -T $(CONTIKI_CPU)/R5F100xL.ld
+else
+  LDFLAGS += -T $(CONTIKI_CPU)/R5F104PJ.ld
+endif
 
   ASFLAGS += -c
   
