Add driver for ADF7242 802.15.4 wireless radio

--- a/cpu/rl78/Makefile.rl78
+++ b/cpu/rl78/Makefile.rl78
@@ -168,6 +168,7 @@ endif
 CONTIKI_CPU_DIRS += .
 CONTIKI_CPU_DIRS += sys
 CONTIKI_CPU_DIRS += adf7023
+CONTIKI_CPU_DIRS += adf7242
 
 ### CPU-dependent source files
 CONTIKI_SOURCEFILES += uart0.c uart1.c
@@ -176,6 +177,7 @@ CONTIKI_SOURCEFILES += syscalls.c
 
 CONTIKI_SOURCEFILES += Communication.c
 CONTIKI_SOURCEFILES += ADF7023.c
+CONTIKI_SOURCEFILES += adf7242.c
 CONTIKI_SOURCEFILES += assert.c
 CONTIKI_SOURCEFILES += slip-arch.c
 CONTIKI_SOURCEFILES += contiki-uart.c
