--- a/examples/er-rest-example/Makefile
+++ b/examples/er-rest-example/Makefile
@@ -7,7 +7,7 @@ CONTIKI=../..
 WITH_UIP6=1
 UIP_CONF_IPV6=1
 CFLAGS += -DUIP_CONF_IPV6=1
-CFLAGS += -DUIP_CONF_IPV6_RPL=1
+#CFLAGS += -DUIP_CONF_IPV6_RPL=1
 
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
 
