--- a/cpu/rl78/Makefile.rl78
+++ b/cpu/rl78/Makefile.rl78
@@ -1,6 +1,6 @@
 # Copyright (c) 2014, Analog Devices, Inc.
 # All rights reserved.
-# 
+#
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
 # are met:
@@ -9,11 +9,11 @@
 # 2. Redistributions in binary form must reproduce the above copyright
 #    notice, this list of conditions and the following disclaimer in the
 #    documentation and/or other materials provided with the distribution.
-# 
+#
 # 3. Neither the name of the copyright holder nor the names of its
 #    contributors may be used to endorse or promote products derived
 #    from this software without specific prior written permission.
-# 
+#
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 # ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 # LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
@@ -26,7 +26,7 @@
 # STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 # OF THE POSSIBILITY OF SUCH DAMAGE.
-# 
+#
 # Author: Ian Martin <martini@redwirellc.com>
 
 CONTIKI_CPU=$(CONTIKI)/cpu/rl78
@@ -34,18 +34,27 @@ CONTIKI_CPU=$(CONTIKI)/cpu/rl78
 ### Compiler definitions
 ifdef IAR
   # Use IAR compiler.
-  
+
   # Default code and data models (n = near, f = far):
   CODE_MODEL ?= n
   DATA_MODEL ?= n
 
-  DEVICE ?= r5f100ll
 
+ifeq ($(TARGET),yrdkrl78-g14)
+  DEVICE ?= r5f104pj
+  RL78_CORE  ?= 2
+  # Default library configuration (n = normal, f = full):
+  LIB_CONFIG ?= f
+  IAR_PATH ?= "C:\Program Files (x86)\IAR Systems\Embedded Workbench 6.5\rl78"
+  CFLAGS  += -e -D_DLIB_FILE_DESCRIPTOR -D_DLIB_FULL_LOCALE_SUPPORT=1
+else
+  DEVICE ?= r5f100ll
   # According to "rl78/config/devices/RL78 - G13/r5f100ll.menu", the R5F100LLA has core 1.
   RL78_CORE  ?= 1
-
-  # Default library configuration (n = normal, f = full):
   LIB_CONFIG ?= n
+  IAR_PATH ?= "C:\Program Files\IAR Systems\$(IAR_SUBPATH)\rl78"
+endif
+
 
   ifeq ($(IAR_PATH),)
     IAR_SUBPATH := $(shell ls "C:\Program Files\IAR Systems" | tail -1 )
@@ -54,7 +63,6 @@ ifdef IAR
       $(error Unable to find the IAR installation path. Please specify IAR_PATH. For example: make IAR_PATH="C:\\Program\ Files\\IAR\ Systems\\Embedded\ Workbench\ 6.5\\rl78" )
     endif
 
-    IAR_PATH := "C:\Program Files\IAR Systems\$(IAR_SUBPATH)\rl78"
   endif
 
   CC = $(IAR_PATH)\\bin\\iccrl78
@@ -80,7 +88,7 @@ ifdef IAR
   LDFLAGS += -Felf
 
   AROPTS ?= -S
-  
+
   TARGET_LIBFILES += $(IAR_PATH)\\lib\\dlrl78$(CODE_MODEL)$(DATA_MODEL)$(RL78_CORE)$(LIB_CONFIG).r87
 
 CUSTOM_RULE_C_TO_O = 1
@@ -106,7 +114,7 @@ CUSTOM_RULE_LINK = 1
 	    ${filter %.a,$^} $(TARGET_LIBFILES) -o $@ -Omotorola=$@.srec
 else
   # Use the GNU RL78 toolchain.
-  
+
   ifndef CROSS_COMPILE
     ifeq ($(shell which rl78-elf-gcc),)
       # The RL78 toolchain is not in the path. Try finding it in /usr/share:
@@ -116,7 +124,7 @@ else
       CROSS_COMPILE := rl78-elf-
     endif
   endif
-  
+
   CC       = $(CROSS_COMPILE)gcc
   LD       = $(CROSS_COMPILE)gcc
   AS       = $(CROSS_COMPILE)gcc
@@ -129,7 +137,7 @@ else
   ifdef WERROR
     CFLAGSWERROR ?= -Werror -pedantic -std=c99 -Werror
   endif
-  
+
   CFLAGSNO ?= -Wall $(CFLAGSWERROR)
   CFLAGS  += $(CFLAGSNO)
 
@@ -154,7 +162,7 @@ else
 endif
 
   ASFLAGS += -c
-  
+
   # C runtime assembly:
   CONTIKI_ASMFILES += crt0.S
   CONTIKI_OBJECTFILES += $(OBJECTDIR)/crt0.o
