--- a/platform/yrdkrl78-g14/Makefile.yrdkrl78-g14
+++ b/platform/yrdkrl78-g14/Makefile.yrdkrl78-g14
@@ -1,6 +1,6 @@
 # Copyright (c) 2014, Analog Devices, Inc.
 # All rights reserved.
-# 
+#
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
 # are met:
@@ -9,11 +9,11 @@
 # 2. Redistributions in binary form must reproduce the above copyright
 #    notice, this list of conditions and the following disclaimer in the
 #    documentation and/or other materials provided with the distribution.
-# 
+#
 # 3. Neither the name of the copyright holder nor the names of its
 #    contributors may be used to endorse or promote products derived
 #    from this software without specific prior written permission.
-# 
+#
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 # ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 # LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
@@ -26,7 +26,7 @@
 # STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 # OF THE POSSIBILITY OF SUCH DAMAGE.
-# 
+#
 # Author: Ian Martin <martini@redwirellc.com>
 
 CONTIKI_TARGET_DIRS = .
@@ -41,6 +41,8 @@ CONTIKI_TARGET_SOURCEFILES += contiki-main.c
 CONTIKI_TARGET_SOURCEFILES += slip.c
 CONTIKI_TARGET_SOURCEFILES += sensors.c
 CONTIKI_TARGET_SOURCEFILES += button-sensor.c
+CONTIKI_TARGET_SOURCEFILES += AD7091R.c
+
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
@@ -49,7 +51,7 @@ ${warning $(CONTIKI)}
 CONTIKIRL78  = $(CONTIKI)/cpu/rl78
 CONTIKIBOARD = .
 
-CONTIKI_PLAT_DEFS = 
+CONTIKI_PLAT_DEFS =
 
 ifeq ($(UIP_CONF_IPV6),1)
 CFLAGS += -DWITH_UIP6=1
