--- a/cpu/rl78/Makefile.rl78
+++ b/cpu/rl78/Makefile.rl78
@@ -190,6 +190,7 @@ CONTIKI_SOURCEFILES += assert.c
 CONTIKI_SOURCEFILES += slip-arch.c
 CONTIKI_SOURCEFILES += contiki-uart.c
 CONTIKI_SOURCEFILES += watchdog.c
+CONTIKI_SOURCEFILES += ST7579.c
 
 ### Compilation rules
 
