platform/yrdkrl78-g14/Makefile.yrdkrl78-g14: Build ADF7242 and ST7579
Signed-off-by: Michael Hennerich <michael.hennerich@analog.com>

--- a/platform/yrdkrl78-g14/Makefile.yrdkrl78-g14
+++ b/platform/yrdkrl78-g14/Makefile.yrdkrl78-g14
@@ -33,8 +33,7 @@ CONTIKI_TARGET_DIRS = .
 CONTIKI_CORE        = contiki-main
 CONTIKI_TARGET_MAIN = ${CONTIKI_CORE}.o
 
-ARCH += ADF7023.c
-ARCH += adf7023-contiki.c
+ARCH += adf7242.c
 
 CONTIKI_TARGET_SOURCEFILES += $(ARCH)
 CONTIKI_TARGET_SOURCEFILES += contiki-main.c
@@ -42,7 +41,7 @@ CONTIKI_TARGET_SOURCEFILES += slip.c
 CONTIKI_TARGET_SOURCEFILES += sensors.c
 CONTIKI_TARGET_SOURCEFILES += button-sensor.c
 CONTIKI_TARGET_SOURCEFILES += AD7091R.c
-
+CONTIKI_TARGET_SOURCEFILES += ST7579.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
